src/test/ui/closures/2229_closure_analysis/migrations/precise.stderr
error: drop order will change in Rust 2021
  --> $DIR/precise.rs:19:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |         let _t = &t.1;
LL | |     };
   | |_____^
   |
note: the lint level is defined here
  --> $DIR/precise.rs:3:9
   |
LL | #![deny(disjoint_capture_migration)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `t` to be fully captured
   |
LL |     let c = || { let _ = &t; 
LL |
LL |
LL |         let _t = t.0;
LL |         let _t = &t.1;
LL |     };
   |

error: drop order will change in Rust 2021
  --> $DIR/precise.rs:42:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _x = u.0.0;
LL | |         let _x = u.0.1;
LL | |         let _x = u.1.0;
LL | |     };
   | |_____^
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `u` to be fully captured
   |
LL |     let c = || { let _ = &u; 
LL |
LL |
LL |         let _x = u.0.0;
LL |         let _x = u.0.1;
LL |         let _x = u.1.0;
 ...

error: aborting due to 2 previous errors

